fix nav menu alignment

--- a/p/themes/Swage/swage.scss
+++ b/p/themes/Swage/swage.scss
@@ -931,6 +931,7 @@ form {
 	width: 100%;
 	font-size: 0;
 	background-color: var(--color-background-nav);
+	text-align: left;
 	position: sticky;
 	top: 0;
 	z-index: 90;
